infrastructure/cockatoo-accounts-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\Users\joris\AppData\Local\Microsoft\WinGet\Links\kompose.exe convert
    kompose.version: 1.35.0 (9532ceef3)
  labels:
    io.kompose.service: cockatoo-accounts-api
  name: cockatoo-accounts-api
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: cockatoo-accounts-api
  template:
    metadata:
      annotations:
        kompose.cmd: C:\Users\joris\AppData\Local\Microsoft\WinGet\Links\kompose.exe convert
        kompose.version: 1.35.0 (9532ceef3)
      labels:
        io.kompose.service: cockatoo-accounts-api
    spec:
      containers:
        - env:
            - name: DB_DATABASE
              valueFrom:
                configMapKeyRef:
                  key: DB_DATABASE
                  name: cockatoo-accounts-api-env
            - name: DB_PASSWORD
              valueFrom:
                configMapKeyRef:
                  key: DB_PASSWORD
                  name: cockatoo-accounts-api-env
            - name: DB_PORT
              valueFrom:
                configMapKeyRef:
                  key: DB_PORT
                  name: cockatoo-accounts-api-env
            - name: DB_SERVER
              valueFrom:
                configMapKeyRef:
                  key: DB_SERVER
                  name: cockatoo-accounts-api-env
            - name: DB_USERID
              valueFrom:
                configMapKeyRef:
                  key: DB_USERID
                  name: cockatoo-accounts-api-env
          image: cockatoo-accounts-api
          name: cockatoo-accounts-api
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
              protocol: TCP
            - containerPort: 8081
              protocol: TCP
      restartPolicy: Always
