infrastructure/cockatoo-frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\Users\joris\AppData\Local\Microsoft\WinGet\Links\kompose.exe convert
    kompose.version: 1.35.0 (9532ceef3)
  labels:
    io.kompose.service: cockatoo-frontend
  name: cockatoo-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: cockatoo-frontend
  template:
    metadata:
      annotations:
        kompose.cmd: C:\Users\joris\AppData\Local\Microsoft\WinGet\Links\kompose.exe convert
        kompose.version: 1.35.0 (9532ceef3)
      labels:
        io.kompose.service: cockatoo-frontend
    spec:
      containers:
        - image: cockatoo-frontend
          name: cockatoo-frontend
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
              protocol: TCP
      restartPolicy: Always
