infrastructure/cockatoo-accounts-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: C:\Users\joris\AppData\Local\Microsoft\WinGet\Links\kompose.exe convert
    kompose.version: 1.35.0 (9532ceef3)
  labels:
    io.kompose.service: cockatoo-accounts-api
  name: cockatoo-accounts-api
spec:
  type: NodePort # Change the service type to NodePort
  ports:
    - name: "9080"
      port: 9080
      targetPort: 8080
    - name: "9081"
      port: 9081
      targetPort: 8081
  selector:
    io.kompose.service: cockatoo-accounts-api
